2012-09-06  Christophe Dumez  <christophe.dumez@intel.com>

        [WKTR] addSelectionKey should be mapped to "Control" modifiers on other OSes than Mac
        https://bugs.webkit.org/show_bug.cgi?id=95973

        Reviewed by Kenneth Rohde Christiansen.

        Unskip several test cases that are passing on WebKit2
        now that "addSelectionKey" is properly mapped to
        "Control" modifier on other OSes than Mac OS X, in
        WKTR's EventSender.

        * platform/efl-wk2/TestExpectations:
        * platform/gtk-wk2/Skipped:
        * platform/win-wk2/Skipped:

2012-09-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        CSS 3 'overflow-wrap' property implementation
        https://bugs.webkit.org/show_bug.cgi?id=94475

        Reviewed by Ojan Vafai.

        Added 'overflow-wrap' property implementation according to
        http://www.w3.org/TR/2012/WD-css3-text-20120814/#overflow-wrap.
        New ref-test is added to check the simularity
        in behaviour of 'overflow-wrap' and 'word-wrap' properties.

        * fast/text/overflow-wrap-expected.html: Added.
        * fast/text/overflow-wrap.html: Added.

2012-09-06  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Update TestExpectations for fast/events/tab-focus-link-in-canvas.html
        https://bugs.webkit.org/show_bug.cgi?id=95970

        Unreviewed EFL gardening.

        Update WK2-EFL TestExpectations to add bug number for:
        fast/events/tab-focus-link-in-canvas.html

        * platform/efl-wk2/TestExpectations:

2012-09-06  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Provide implementation for WebPage::performDefaultBehaviorForKeyEvent()
        https://bugs.webkit.org/show_bug.cgi?id=95943

        Reviewed by Kenneth Rohde Christiansen.

        Unskip several test cases that are passing now that EFL WK2
        has a proper implementation for
        WebPage::performDefaultBehaviorForKeyEvent().
