@@ -2,5 +2,5 @@ This test checks that CachedImages size reported by the memory agent includes im
 
 
 didReceiveMemorySnapshot
-PASS: CachedImages size is OK.
+PASS: MemoryCache.Image size is OK.
 
